--- a/MySuperGame/MainPage.xaml
+++ b/MySuperGame/MainPage.xaml
@@ -8,6 +8,15 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <Canvas
+            x:Name="MyCanvas"
+            Width="800"
+            Height="600"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom">
+            <Canvas.Background>
+                <ImageBrush ImageSource="Assets/kukkaniitty.png"/>
+            </Canvas.Background>
+        </Canvas>
     </Grid>
 </Page>
